# ClawdClock

./: .gitignore  LICENSE  Prompt.md  README.md  ROADMAP.md  build-scr.ps1  deploy.ps1  index.html  latest.json  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
ClawdClock/: .thumbnail  ClawdClock.html  Settings.html
docs/superpowers/plans/: 2026-06-18-date-display.md
docs/superpowers/specs/: 2026-06-18-date-display-design.md
scripts/: package-scr.mjs
src/: App.tsx  SettingsApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  updater-key.pem.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: lib.rs  main.rs
src/components/Achievements/: AchievementToast.tsx  AchievementsPanel.tsx
src/components/ClawdClockView/: ClawdClockView.tsx
src/components/ClawdMascot/: BouncingMascot.tsx
src/components/EscapeBar/: EscapeBar.tsx
src/components/FlipClock/: DateDisplay.tsx  FlipClock.tsx  FlipDigit.tsx
src/components/GitHubPanel/: CIStatusBadge.tsx  ContributionGrid.tsx
src/components/MiniCard/: MiniCard.tsx  MiniClock.tsx
src/components/OllamaPanel/: OllamaSection.tsx
src/components/OpenAIPanel/: OpenAISection.tsx
src/components/PasswordPrompt/: PasswordPrompt.tsx
src/components/ProgressBar/: ProgressBar.tsx
src/components/Settings/: ChangelogPanel.tsx  Dropdown.tsx  HelpPanel.tsx  SegControl.tsx  (+3 more)
src/hooks/: useAchievements.ts  useBouncingMascot.ts  useCIStatus.ts  useChangelog.ts  useClaudeUsage.ts  useClock.ts  useClockExit.ts  useEscapeBar.ts  useGitHubContributions.ts  useHotkey.ts  useIdleDetection.ts  useKeepAwake.ts  useMonitors.ts  useOledShift.ts  useOllamaStatus.ts  useOpenAIUsage.ts  useScale.ts  useSystemDefaults.ts  useTrayTooltip.ts  useUpdater.ts
src/services/: ClaudeUsageService.ts
src/stores/: settingsStore.ts  usageStore.ts
src/styles/: globals.css  settings.css
src/themes/: index.ts
src/types/: index.ts
src/utils/: countdown.ts  miniMarkdown.tsx
(+2 files in other folders)
